Fixed bug #25701 (On flush() set headers_sent in apache2handler)